[package]
name = "port-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
indicatif = "0.18.4"
surge-ping = "0.8.4"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
